--- a/shweb/translations/ru/LC_MESSAGES/messages.po
+++ b/shweb/translations/ru/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-09-17 21:17+0300\n"
-"PO-Revision-Date: 2021-09-17 21:14+0300\n"
+"POT-Creation-Date: 2021-09-18 14:27+0300\n"
+"PO-Revision-Date: 2021-09-18 12:51+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: ru\n"
 "Language-Team: ru <LL@li.org>\n"
@@ -19,7 +19,108 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
+#: utils.py:6
+msgid "Single"
+msgstr "Сингл"
+
+#: utils.py:7
+msgid "Album"
+msgstr "Альбом"
+
+#: utils.py:8
+msgid "Ep"
+msgstr "Ep"
+
+#: templates/base.html:41 templates/base.html:42 templates/base.html:43
+#: utils.py:9
+msgid "single"
+msgstr "сингл"
+
+#: utils.py:10
+msgid "album"
+msgstr "альбом"
+
+#: utils.py:11
+msgid "ep"
+msgstr "ep"
+
+#: utils.py:17
+msgid "jan"
+msgstr "января"
+
+#: utils.py:18
+msgid "feb"
+msgstr "февраля"
+
+#: utils.py:19
+msgid "mar"
+msgstr "марта"
+
+#: utils.py:20
+msgid "apr"
+msgstr "апреля"
+
+#: utils.py:21
+msgid "may"
+msgstr "мая"
+
+#: utils.py:22
+msgid "jun"
+msgstr "июня"
+
+#: utils.py:23
+msgid "jul"
+msgstr "июля"
+
+#: utils.py:24
+msgid "aug"
+msgstr "августа"
+
+#: utils.py:25
+msgid "sep"
+msgstr "сентября"
+
+#: utils.py:26
+msgid "oct"
+msgstr "октября"
+
+#: utils.py:27
+msgid "nov"
+msgstr "ноября"
+
+#: utils.py:28
+msgid "dec"
+msgstr "декабря"
+
+#: templates/base.html:15 templates/base.html:16 templates/base.html:17
+msgid "description"
+msgstr "Пост-метал из Санкт-Петербурга"
+
 #: templates/base.html:36
 msgid "home"
 msgstr "домой"
+
+#: templates/base.html:37
+msgid "feed"
+msgstr "новости"
+
+#: templates/base.html:39
+msgid "discogs"
+msgstr "музыка"
+
+#: templates/release.html:39
+msgid "Play"
+msgstr "Play"
+
+#: templates/release.html:60
+msgid "share"
+msgstr "поделиться"
+
+#: templates/release.html:90
+msgid "Release date"
+msgstr "Дата релиза"
+
+#: templates/release.html:91
+msgid "Tracklist"
+msgstr "Треклист"
 
